apps/homeassistant/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: "homeassistant/home-assistant:2025.4"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
